--- a/themes/SystemDarkTheme/res/values/colors.xml
+++ b/themes/SystemDarkTheme/res/values/colors.xml
@@ -4,6 +4,17 @@
     <!-- Resolver -->
     <color name="resolver_list_bg">@*android:color/background_material_dark</color>
 
+    <!-- Power menu items -->
+    <color name="power_menu_power_off">@*android:color/accent_device_default_light</color>
+    <color name="power_menu_restart">@*android:color/accent_device_default_light</color>
+    <color name="power_menu_restart_advanced">@*android:color/accent_device_default_light</color>
+    <color name="power_menu_hot_reboot">@*android:color/accent_device_default_light</color>
+    <color name="power_menu_advanced_bootloader">@*android:color/accent_device_default_light</color>
+    <color name="power_menu_advanced_recovery">@*android:color/accent_device_default_light</color>
+    <color name="power_menu_advanced_system_restart_ui">@*android:color/accent_device_default_light</color>
+    <color name="power_menu_screenshot">@*android:color/accent_device_default_light</color>
+    <color name="power_menu_airplane">@*android:color/accent_device_default_light</color>
+
     <!-- Immersive cling -->
     <color name="immersive_cling_bg_color">@*android:color/background_material_dark</color>
     <color name="immersive_cling_text_color">@android:color/white</color>
