Theme two target preference vertical divider
Before:
https://imgur.com/mvOORbG
After:
https://imgur.com/IJ5IubU

Change-Id: I2567342c7d9a34079dce63dc5b5ce9c518dc6644
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/themes/BlackAF/System/res/values/colors.xml
+++ b/themes/BlackAF/System/res/values/colors.xml
@@ -57,5 +57,9 @@
     <!-- Toast text and bg colors -->
     <color name="toast_bg_color">@*android:color/black</color>
     <color name="toast_text_color">@android:color/white</color>
+    <color name="background_floating_material_dark">#ff111111</color>
+
+    <!-- Two target preference vertical divider color -->
+    <color name="list_divider_dark">@*android:color/black</color>
 
 </resources>
